# rosbot_3

./: README.md  lane_follower_node_modified.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rosbot_lane_follower_v2/lib/rosbot_lane_follower_v2/: lane_follower_node  steering_controller_node
install/rosbot_lane_follower_v2/share/rosbot_lane_follower_v2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rosbot_lane_follower_v2/share/rosbot_lane_follower_v2/launch/: lane_follower.launch.py
log/: latest_build
src/rosbot_lane_follower_v2/: commands.txt  package.xml  setup.cfg  setup.py
src/rosbot_lane_follower_v2/data/: odom_per_frame.csv
src/rosbot_lane_follower_v2/models/: check_model.py
src/rosbot_lane_follower_v2/rosbot_lane_follower_v2/: lane_follower_node.py  postprocess.py  steering_controller_node.py  transforms.py  utils.py
src/rosbot_lane_follower_v2/rviz/: lane_overlay_config.rviz
