<?xml version="1.0"?>
<package format="3">
  <name>rosbot_lane_follower_v2</name>
  <version>0.1.0</version>
  <description>ROS2 lane follower using UNet and camera-based input</description>
  <maintainer email="kartikwakekar9999@gmail.com">Kartik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>torch</depend>
  <depend>opencv-python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
